[project]
name = "banner_j25ng"
version = "0.2.0"
description = "Banner Output Program"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
]
dependencies = [
    "pyfiglet>=1.0.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true 
